classDiagram
    class application {
        - logger
        - mailer
        - templateCache
        - formDecoder
        - sessionManager
        - waitGroup
    }

    class config {
        - string websocketURL
        - int port
        - string env
        - broker
        - string db-dsn
        - smtp
    }

    class Models {
        + gorm.DB DB

        + Location
        + Device
        + Module
        + Data
        + ModuleModels

        + GetByID(int ID) (any, error)
        + Update(any item) error
        + Delete(int ID) error
    }

    class Broker {
        - mqtt.ClientOptions opts
        - mqtt.Client
        - byte qos

        + Pub(string topic, string message)
    }

    class Device {
        + string ID
        + time.Time CreatedAt
        + time.Time UpdatedAt
        + gorm.DeletedAt DeletedAt
        + uint LocationID
        + Location   Location
        + string Type
        + string Name
        + []Module Modules
    }

    class Location {
        + uint ID
        + time.Time CreatedAt
        + time.Time UpdatedAt
        + gorm.DeletedAt DeletedAt
        + string Type
        + string Name
    }

    class IModule {
        <<interface>>
        + GetName() string
        + GetValue() any
    }

    class Module {
        + uint ID
        + time.Time CreatedAt
        + time.Time UpdatedAt
        + gorm.DeletedAt DeletedAt
        + string DeviceID
        + string Name
        + string Value
    }

    class LightController {
        + uint ID
        + time.Time CreatedAt
        + time.Time UpdatedAt
        + gorm.DeletedAt DeletedAt
        + string DeviceID
        + string Name
        + bool Value
    }

    class TemperatureSensor {
        + uint ID
        + time.Time CreatedAt
        + time.Time UpdatedAt
        + gorm.DeletedAt DeletedAt
        + string DeviceID
        + string Name
        + float Value
    }

    class Data {
        + uint ID
        + time.Time CreatedAt
        + time.Time UpdatedAt
        + gorm.DeletedAt DeletedAt
        + string DeviceID
        + uint ModuleID
        + string ModuleName
        + string ModuleValue
    }

    application *.. config
    application *.. Models

    Models *.. Broker

    Data *.. Device
    Device *.. Location
    Device *.. Module

    IModule <|-- Module
    IModule <|-- LightController
    IModule <|-- TemperatureSensor